--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ yandex_metrika: 38035280
 google_analytics: UA-46456269-11
 permalink: /:title/
 
-#title: "Николай Воробьёв"
-#description: "Помогаю перестать быть такой жалкой тряпкой"
-#keywords: "#ШоуВоробьёва"
-#author: "Николай Воробьёв"
+title: "Николай Воробьёв"
+description: "Помогаю достичь в жизни гораздо большего"
+keywords: "#ШоуВоробьёва"
+author: "Николай Воробьёв"
